Style: index.css에 공통으로 사용되는 labelRequireMark, labelOptionalMark css 추가

--- a/front/src/styles/index.css
+++ b/front/src/styles/index.css
@@ -19,3 +19,13 @@ code {
 a {
   text-decoration: none;
 }
+
+.labelRequireMark {
+  color: red;
+}
+.labelOptionalMark {
+  color: #a3a3a3;
+  font-weight: 400;
+  margin-left: 4px;
+  font-size: 13px;
+}
